--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -38,6 +38,8 @@
 
     <div id="premiumUser"></div>
 
+    <div id="leaderboard"></div>
+
     <div id="allExpense"></div>
 
     <div id="dropin-container"></div>
