--- a/frontend/loginPage.html
+++ b/frontend/loginPage.html
@@ -31,6 +31,10 @@
         <a href="index.html">Signup</a>
 
     </div>
+
+    <div>
+        <button type="button" id="forgotPassword">Forgot Password</button>
+    </div>
     
     <div id="message"></div>
     <script src="app.js"></script>
